# libdor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DOCS/: Doxyfile  duelists-of-the-roses-save-format.md
include/: DOR.h  PSU.h  common.h
src/: DOR.c  DORCards.c  DORInternal.h  DORText.c  PSU.c
testapp/: CMakeLists.txt  main.c
